--- a/src/global.css
+++ b/src/global.css
@@ -23,7 +23,8 @@ body {
 }
 
 .wg-form-container {
-  @apply bg-zinc-900 p-4 relative rounded-2xl mb-4 flex flex-col items-center shadow-lg w-[calc(100vw-2rem)] md:w-auto;
+  @apply bg-zinc-900 p-4 relative rounded-2xl mb-4 flex flex-col items-center shadow-lg w-[calc(100vw-2rem)]
+  md:w-auto;
 }
 
 .wg-header {
@@ -35,7 +36,8 @@ body {
 }
 
 .btn-feedback-types {
-  @apply bg-zinc-800 rounded-lg py-5 w-24 flex-1 flex flex-col items-center gap-2 border-2 border-transparent hover:border-lemonade-500 focus:border-lemonade-500 focus:outline-none;
+  @apply bg-zinc-800 rounded-lg py-5 w-24 flex-1 flex flex-col items-center gap-2 border-2
+  border-transparent hover:border-lemonade-500 focus:border-lemonade-500 focus:outline-none;
 }
 
 .wg-footer {
@@ -64,4 +66,39 @@ body {
 
 .arrow-left {
   @apply top-5 left-5 absolute text-zinc-400 hover:text-zinc-100;
+}
+
+form {
+  @apply my-4 w-full;
+}
+
+form textarea {
+  @apply min-w-[304px] w-full min-h-[112px] text-sm placeholder-zinc-400
+  text-zinc-100 border-zinc-600 bg-transparent rounded-md focus:border-lemonade-500
+  focus:ring-lemonade-500 focus:ring-1 focus:outline-none resize-none;
+}
+
+form footer {
+  @apply flex gap-2 mt-2;
+}
+
+
+.btn-submit {
+  @apply p-2  bg-lemonade-500 rounded-md border-transparent flex-1 flex justify-center items-center text-sm
+  hover:bg-lemonade-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900
+  focus:ring-lemonade-500 transition-colors font-semibold disabled:opacity-50 disabled:hover:bg-lemonade-500;
+}
+
+.btn-print {
+  @apply p-2 bg-zinc-800 rounded-md border-transparent hover:bg-zinc-700 transition-colors
+  focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-zinc-900 focus:ring-lemonade-500;
+}
+
+.btn-printed {
+  @apply p-1 w-10 h-10 rounded-md border-transparent flex justify-end items-end text-zinc-400
+  hover:text-zinc-100 transition-colors;
+}
+
+.loading-content {
+  @apply w-6 h-6 flex items-center justify-center overflow-hidden;
 }
