--- a/src/global.css
+++ b/src/global.css
@@ -102,3 +102,17 @@ form footer {
 .loading-content {
   @apply w-6 h-6 flex items-center justify-center overflow-hidden;
 }
+
+.success-content {
+  @apply flex flex-col items-center py-10 w-[304px];
+}
+
+.success-msg {
+  @apply text-xl mt-2;
+}
+
+.btn-new-feedback {
+  @apply py-2 px-6 mt-6 bg-zinc-800 rounded-md border-transparent text-sm leading-6
+  hover:bg-zinc-700 transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2
+  focus:ring-offset-zinc-900 focus:ring-lemonade-500;
+}
